Add users/onboard API endpoint
