# api/routers/http/routes.go
@@ -12,6 +12,10 @@ func AddRoutes(r *gin.Engine, authMiddleware *jwt.GinJWTMiddleware) *gin.RouterG
 	{
 		api.POST("/login", authMiddleware.LoginHandler)
 
+		api.POST("/users/onboard", func(c *gin.Context) {
+			controllers.OnboardUser(c)
+		})
+			
 		// Secured endpoints..
 		api.Use(authMiddleware.MiddlewareFunc())
 		{
@@ -37,6 +41,8 @@ func AddRoutes(r *gin.Engine, authMiddleware *jwt.GinJWTMiddleware) *gin.RouterG
 			api.DELETE("/users/:id", func(c *gin.Context) {
 				controllers.DeleteUser(c)
 			})
+
+			
 			// End users
 
 			// Locations
